Fix main layout on mobile

--- a/main.sass
+++ b/main.sass
@@ -242,7 +242,7 @@ h5
   width: 50%
   @media screen and (max-width: $break-small)
     width: 100% 
-  @media screen and (max-width: $break-tablet)
+  @media screen and (min-width: $break-small)
     width: 80%
 
 
